Fix: Fix Imports

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./fav/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="96x96" href="./fav/favicon-96x96.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./fav/favicon-16x16.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./fav/" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
